honeydew/app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_self
 *= require font-awesome
 *= require bootstrap-tokenfield
 *= require bootstrap
 *= require tasks
 *= require emerald
 *= require emerald_split2
 *= require emerald_split3
 *= require splash
 *= require authenty
 *= require skin-prussia
 *= require skeuocard.reset
 *= require skeuocard
 *= require overrides
 *= require overlays
 *= require star-rating
 *= require icomoon

*/
@import "bootstrap-sprockets";

.pace-running .s3-loader{
    zoom:1;
    filter:blur(3px);
    opacity:0.1;
}

.rating {
    list-style: none;
    margin-left:-50px ;
    text-align:center;
}
.rating_star, .on {
    display: inline;
}
.rating_star:before {
    content: "\f005";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    /*--adjust as necessary--*/
    color: #D0D1D0;
    font-size: 18px;
}
.on:before{
    content: "\f005";
    font-family: FontAwesome;
    font-style: normal;
    font-weight: normal;
    text-decoration: inherit;
    /*--adjust as necessary--*/
    color: #FFF00C;
    font-size: 18px;
}

//Tagging in Task/index
.tag_cloud{
position: absolute;
background-color: rgba(255,255,255,.7);
}
.tag {
    width: 1.5em;
    height: 1.5em;
    padding: 5px;
    border-style: solid;
    border-color: rgba(255,255,255,.5);
    border-width: 1px;
    color: rgba(255,255,255,.85);
    text-decoration: none;
    line-height: 2.5em;
    white-space: nowrap;
}.tag:visited{
     color: rgba(255,255,255,.85);
 }.tag:hover{
      background-color: rgba(255,255,255,.7);
      color: rgba(0,0,0,.85);
      text-decoration: none;
  }
.tag-black{
    border-color: rgba(0,0,0,.5);
    color: rgba(0,0,0,.85);
}.tag-black:visited{
     color: rgba(0,0,0,.85);
 }.tag-black:hover{
      background-color: rgba(0,0,0,.7);
      color: rgba(255,255,255,.85);
      text-decoration: none;
  }

#tag_cloud {
    width: 400px;
    line-height: 1.6em;
}
.s {font-size:.8em;}
.m {font-size:1.2em;}
.l {font-size:1.8em;}

.form-sm{
    width: 4em;
}
.form-md{
    width: 50%;
}
.form-lg{
    width: 50%;
}
.form-xl{
    width: 75%;
}
.form-price{
    width: 5em;
}

input:focus {
    outline: 0;
}
.nlform {
    font-size: 2em;
    font-family: "Helvetica Neue", sans-serif;
    font-weight: 200;
    line-height: 2em;
    padding-bottom: .5em;

}
.nlform .nlsubmit {
    line-height: 3;
    text-transform: uppercase;
    cursor: pointer;
    position: relative;
    background: #28A79C;
    color: rgba(0,0,0,.85);
    letter-spacing: 3px;
    border: none;
}
.nlform > input{
    color: rgba(0,0,0,.85);
    background-color: rgba(255,255,255,.7);
}
.price{
    font-size: 1.3em;
    color: limegreen;
}

@media screen and (max-width: 45em) {
    .nlform {
        font-size: 1.5em;
    }
    .form-lg{
        width: 65%;
    }
}

@media screen and (max-width: 25em) {
    .nlform {
        font-size: 1.2em;
    }
    .form-sm{
        width: 5em;
    }
    .form-lg{
        width: 75%;
    }
}

//ending style for natural language forms

//Pagination

  .rr_pagination {
      text-align: center;
      padding: 0.3em;
      cursor: default; }
.rr_pagination a, .rr_pagination span, .rr_pagination em {
    padding: 0.2em 0.5em; }
.rr_pagination .disabled {
    color: #aaaaaa; }
.rr_pagination .current {
    font-style: normal;
    font-weight: bold;
    color: #28A79C; }
.rr_pagination a {
    border: 1px solid #0063dc;
    color: #0063dc;
    text-decoration: none; }
.rr_pagination a:hover, .rr_pagination a:focus {
    border-color: #0063dc;
    background: #0063dc;
    color: white; }
.rr_pagination .page_info {
    color: #aaaaaa;
    padding-top: 0.8em; }
.rr_pagination .previous_page, .rr_pagination .next_page {
    border-width: 1px; }
.rr_pagination .previous_page {
    margin-right: 1em; }
.rr_pagination .next_page {
    margin-left: 1em; }

.profilepic{
    width:150px;
    height:auto;
    max-width: 100%;
}
.notepic{
    width: 50px;
    height:50px;
    max-width:100%;
}
.alert{
    position:relative;
    top:10px;
    width:85%;
    left:7.5%;
    background: rgba(51,51,51,.8);
    text-align: center;
    z-index:1000;

}
.content{
    margin-top: 40px;
}
.loginsocial{
    display:none;
}
.socialbutton{
    margin-bottom:100px;
}


/*Basic content Layout*/

#wrapper {
    top:50px;
    padding-left: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}

#wrapper.toggled {
    top:50px;
    padding-left: 250px;
}

#sidebar-wrapper {
    top:50px;
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: rgba(10,10,10,.85);
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}
#sidebar-wrapper {
    top:50px;
    z-index: 1000;
    position: fixed;
    left: 250px;
    width: 0;
    height: 100%;
    margin-left: -250px;
    overflow-y: auto;
    background: rgba(10,10,10,.85);
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
}
#wrapper.toggled #sidebar-wrapper {
    width: 250px;
}

#page-content-wrapper {
    width: 100%;
    padding: 15px;
}
/* ... */

